[project]
name = "dataset-image-scraping-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=3.4.8",
    "fake-useragent>=0.1.11",
    "huggingface-hub>=0.10.0",
    "icrawler>=0.6.6",
    "imagehash>=4.2.1",
    "pillow>=8.3.1",
    "pyopenssl>=20.0.1",
    "python-dotenv>=0.19.0",
    "requests>=2.25.1",
    "selenium>=4.0.0",
    "tqdm>=4.62.3",
    "urllib3>=1.26.5",
    "webdriver-manager>=3.5.2",
]
